# pzzl

./: .gitignore  Dockerfile  README.md  WORKSPACE  build.sh  database-migration.sh  index.html
database/: Cargo.toml
database/migrations/: V1__initial.sql
database/src/: main.rs
infrastructure/aws/prod/: dynamodb.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
infrastructure/aws/prod/database/: lambda.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
infrastructure/aws/prod/ecr/: ecr.tf  terraform.tfstate  vars.tf
infrastructure/aws/prod/lambda/: lambda.tf  lamdba.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
infrastructure/aws/prod/s3/: s3.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
infrastructure/local/prod/: main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup
pzzl-database/: Cargo.toml  Dockerfile  build.sh
pzzl-database/migrations/: V1__initial.sql
pzzl-database/src/: main.rs
pzzl-lambda/: Cargo.toml
pzzl-lambda/src/: main.rs
pzzl-server/: Cargo.toml
pzzl-server/src/: main.rs
pzzl-service/: Cargo.toml
pzzl-service/src/: db.rs  lib.rs  queries.rs  types.rs  util.rs
server/: Cargo.toml
server/src/: main.rs
