[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = { version="0.8.12", features=["tokio-postgres"] }
tokio = { version= "1.36.0", features = ["full"] }
clap = { version = "4.5.4", features = ["env", "derive"] }
tokio-postgres = "0.7.10"
