[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = { version="0.8.12", features=["tokio-postgres"] }
clap = { version = "4.5.4", features = ["env", "derive"] }
lambda_runtime = "0.11.1"
aws_lambda_events = "0.15.0"
anyhow = "1"
config = "0.14"
log = "0.4"
pretty_env_logger = "0.5"
rustls = "0.23.4"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"

