[package]
name = "pzzl-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.11.1"
axum = { version="0.7.4", features=["macros"] }
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version= "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
pzzl-service = { path = "../pzzl-service" }
clap = { version = "4.5.4", features = ["env", "derive"] }
