[package]
name = "pzzl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.4", features=["macros"] }
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version= "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
pzzl-service = { path = "../pzzl-service" }
