[package]
name = "pzzl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version="0.7.4", features=["macros"] }
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
pzzl-service = { path = "../pzzl-service" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
rustls = { version = "0.20", features = ["tls"] }
rustls-pemfile = "0.3"
tokio-rustls = "0.23"
async-trait = "0.1.51"

