[package]
name = "pzzl-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31.1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version= "1.36.0", features = ["full"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
rand = "0.8.5"
uuid = { version= "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.38"
